--- a/ms_3_res_disc_concl.Rmd
+++ b/ms_3_res_disc_concl.Rmd
@@ -16,7 +16,7 @@ PLOS ONE editorial decisions do not rely on perceived significance or impact, so
 
 # Results and Discussion
 
-[brief overview of results/discussion?]
+[brief overview of results/discussion?] In comparing the IUCN and AquaMaps datasets, it is again important to emphasize that the two differ in both methodology and intent.  As area of occupancy is generally defined as a subset of a species' extent of occurrence, AquaMaps ranges (effectively area of occupancy) should generally fall within the bounds of IUCN ranges (effectively extent of occurrence), capturing a smaller total area.  However, AquaMaps range maps are created independently from IUCN data and therefore exceptions are certain to arise.  Here we are looking for systematic deviations from our expectations that might highlight implications of data use decisions.
 
 ## Taxonomic and geographic coverage
 
@@ -24,7 +24,6 @@ PLOS ONE editorial decisions do not rely on perceived significance or impact, so
 
 > __Fig 1.__ (A) Number and proportion of species by taxa included in each dataset.  Overlapping species are dominated by bony fishes (`r format(n_bonyfish, big.mark = ',')` species, primarily tropical taxa) and corals (`r format(n_corals, big.mark = ',')` species).  (B, C) Global marine species count per 0.5° cell according to (B) AquaMaps and (C) IUCN.  The margin frequency plots show relative species count per cell at each latitude and longitude. 
 
-[ideas for discussion here? each provides information unavailable in the other; in addition to considerations about the nature of each dataset, the species and regions covered are an important consideration in which dataset to use]
 
 ``` {r load_spp_list_by_quad, echo = FALSE}
 spp_list_quads <- read.csv('data/spp_list_quads.csv', stringsAsFactors = FALSE)
@@ -61,13 +60,15 @@ med_occ_q123 <- round(median(spp_quads_occ$mean_occ[spp_quads_occ$quad %in% c('q
 
 ## Distribution and range size alignment
 
-[discussion] [results] Comparing distribution alignment and area ratio for the `r format(n_spp_both, big.mark = ',')` paired map species (Fig 2A), a weak negative linear pattern appears to emerge, suggesting that increasing similarity in range area correlates very slightly with decreasing distribution alignment (R^2 = .016).  The pattern itself is unimportant, and emerges simply due to the nature of the analysis and the datasets:  AquaMaps tends to extrapolate species ranges into suitable areas beyond known occurrences more frequently than IUCN maps, such that each additional unit of range predicted by AquaMaps will fall in different locations than an additional unit of range predicted using IUCN methodology. For species with dissimilar range areas, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range. For species with increasingly similar range areas, differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
+[discussion] [results] Comparing distribution alignment and area ratio for the `r format(n_spp_both, big.mark = ',')` paired map species (Fig 2A), a weak negative linear pattern appears to emerge, suggesting that increasing similarity in range area correlates very slightly with decreasing distribution alignment (R^2 = .016).  The pattern itself is not particularly important, and emerges simply due to the nature of the analysis and the datasets:  The AquaMaps model tends to extrapolate species ranges into suitable areas beyond known occurrences more frequently than IUCN maps, such that each additional unit of range predicted by AquaMaps will fall in different locations than an additional unit of range predicted using IUCN methodology. For species with dissimilar range areas, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range. For species with increasingly similar range areas, differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
  
-The mean distribution alignment for species included in both datasets was `r dist_align_mean`%; the mean area alignment was `r area_align_mean`%. By dividing the paired map species into quadrants based on these means, we highlight categories of relationships that help further explain this general pattern. Representative maps from each category are provided in the supporting materials (Fig S1).
+The mean distribution alignment for species included in both datasets was `r dist_align_mean`%; the mean area alignment was `r area_align_mean`%. By dividing the paired map species into quadrants based on these means, we highlight categories of relationships that help further explain this general pattern. Representative maps from each category are provided in the supporting materials (Fig SXXX).
  
-Where two independent methods predict presence (or absence) of a species in the same location, we can assume a higher confidence in the accuracy of that prediction.  Where one method predicts presence while the other predicts absence, we can investigate potential sources of commission and omission errors to refine our understanding of the species' range.  Understanding and addressing these sources of error provides guidance to improve predictions of species range even when only one source of spatial data is available.
+<!--
+Where two independent methods predict presence (or absence) of a species in the same location, we assume a higher confidence in the accuracy of that prediction.  Where one method predicts presence while the other predicts absence, we can investigate potential sources of commission and omission errors to refine our understanding of the species' range.  Understanding and addressing these sources of error provides guidance to improve predictions of species range even when only one source of spatial data is available.
+-->
 
-> __Fig 2.__ (A) Distribution alignment (overlap of smaller range within larger) versus area ratio (the ratio of smaller range area to the larger range area) for `r format(n_spp_both, big.mark = ',')` species included in both IUCN and AquaMaps datasets.  The upper right quadrant (quadrant 1) comprises species whose maps largely agree (better than median value) in both spatial distribution and the extent of described ranges (n = `r q1_count`; `r round(q1_count/nrow(spp_map_pairs) * 100, 1)` %).
+> __Fig 2.__ (A) Distribution alignment (overlap of smaller range within larger) versus area ratio (the ratio of smaller range area to the larger range area) for `r format(n_spp_both, big.mark = ',')` species included in both IUCN and AquaMaps datasets.  The upper right quadrant (quadrant 1) comprises species whose maps largely agree (better than mean value) in both spatial distribution and the extent of described ranges (n = `r q1_count`; `r round(q1_count/nrow(spp_map_pairs) * 100, 1)` %).
 The upper left quadrant (quadrant 2) comprises species whose maps agree well in distribution, but disagree in area
 (n = `r q2_count`; `r round(q2_count/nrow(spp_map_pairs) * 100, 1)` %).
 The lower right quadrant (quadrant 3) includes species for which the paired maps generally agree in range area, but disagree on where those ranges occur
@@ -76,25 +77,34 @@ The lower left quadrant (quadrant 4) indicates species for which the map pairs a
 (n = `r q4_count`; `r round(q4_count/nrow(spp_map_pairs) * 100, 1)` %).
 (B) Alignment quadrant breakdown of species by taxonomic group.
  
-[results/discussion] The upper right quadrant includes the species (n = `r n_q1`) whose described ranges are above average in alignment of both spatial distribution and area. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because their ranges span nearly the entire map.
+[results/discussion] The upper right quadrant includes the species (n = `r n_q1`) whose described ranges are above average in alignment of both spatial distribution and area. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because their extent of occurrence and area of occupancy both span nearly the entire map.
 
-[results/discussion] The area-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where one range is notably larger than the other (For `r round(n_q2_iucn_larger/n_q2 * 100, 1)`% of the species in this quadrant, the IUCN range is an average of 2.57 times larger than the AquaMaps range).  This suggests a high rate of commission and/or omission errors by one or both datasets; further analysis is required to disentangle the source and type of error contributing to poor area alignment.  The results of the coral analysis (described below) provide some insight.  
+[results/discussion] The area-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where one range is notably larger than the other.  For `r round(n_q2_iucn_larger/n_q2 * 100, 1)`% of the species in this quadrant, the IUCN range is larger (on average, 2.57 times as large) than the AquaMaps range, as expected when comparing an extent of occurrence to an area of occupancy map.  This suggests a high rate of commission and/or omission errors by one or both datasets; further analysis is required to disentangle the source and type of error contributing to poor area alignment.  The results of the coral analysis (described below) provide some insight.
 
-[results/discussion] Species found in the lower right quadrant (n = `r n_q3`) seem to represent cases of "two wrongs make a right."  For these species, IUCN and AquaMaps both predict ranges extending far beyond the overlapping region, but the methodological differences result in very different extrapolations.   Consequently, area ratios are close to 100%, though the poor distribution alignment indicates that one or both datasets are introducing significant errors. As above, further analysis is required to disentangle the causes of error.
+[results/discussion] Species found in the lower right quadrant (n = `r n_q3`) seem to represent cases of "two wrongs make a right."  For these species, IUCN and AquaMaps both predict ranges extending far beyond the overlapping region, but the methodological differences result in very different extrapolations.   Consequently, area ratios are close to 100%, though the poor distribution alignment indicates that one or both datasets are introducing significant errors.  In this quadrant, the IUCN range is the larger for only 56.5% of species, defying our expectations based on definitions of area of occupancy and extent of occurrence.  As above, further analysis is required to disentangle the causes of error.
 
-[results] The lower left quadrant includes species (n = `r n_q4`) where alignment is poor in both dimensions.  Data-poor species are more common in this quadrant; indeed, the median number of species occurrence records (averaging occurrences from the Ocean Biogeographic Information System (OBIS) [@obis_data_2016] and the Global Biodiversity Information Facility (GBIF) [@gbif_global_2010]) for this quadrant is `r med_occ_q4` records, compared to a median of `r med_occ_q123` records for species across the other three quadrants.  In addition, the AquaMaps dataset offers a quality metric based on the number of unique cells containing valid occurrences; for this quadrant, the median "occurcells" is 11 compared to a median of 40 across the other three quadrants.  Care should be taken when using distribution and range maps based upon fewer observations, as they clearly bear greater uncertainty; AquaMaps explicitly recommends using any of its maps generated with an "occurcells" count fewer than 10 [@AquaMapsXXX].
+<!--
+   quad am_sm iucn_sm tot_n
+  <chr> <int>   <int> <int>
+1    q1   422     105   527
+2    q2   624      85   709
+3    q3   359     276   635
+4    q4   109     334   443
+-->
+
+[results] The lower left quadrant includes species (n = `r n_q4`) where alignment is poor in both dimensions.  In this quadrant, the IUCN range is larger for only 24.6% of species; this again defies our expectations for extent of occurrence and area of occupancy range predictions.  Data-poor species are more common in this quadrant; indeed, the median number of species occurrence records (averaging occurrences from the Ocean Biogeographic Information System (OBIS) [@obis_data_2016] and the Global Biodiversity Information Facility (GBIF) [@gbif_global_2010]) for this quadrant is `r med_occ_q4` records, compared to a median of `r med_occ_q123` records for species across the other three quadrants.  The AquaMaps dataset offers its own quality metric based on the number of unique cells containing valid occurrences; for this quadrant, the median "occurcells" is 11 compared to a median of 40 across the other three quadrants.  Care should be taken when using distribution and range maps based upon fewer observations, as they clearly bear greater uncertainty; AquaMaps explicitly warns against using any of its maps generated with an "occurcells" count fewer than 10 [@kaschner_aquamaps:_2015].
 
 ## Coral depth exploration
 
-[discussion] Noting from Fig 2B that corals dominate the upper-left "distribution-aligned" quadrant of Fig 2A (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), we chose to examine the effect of explicitly restricting IUCN ranges to depths based on species' life histories.  Corals offer an excellent case study, due to their foundational role in biodiverse habitats, as well as their lack of mobility and reliance on photosynthesis.  Ocean depth preference is explicitly included as a parameter in AquaMaps models.  While depth is recommended by the IUCN as a criterion for providers of range maps ("The limits of distribution can be determined by using known occurrences of the species, along with the knowledge of habitat preferences, remaining suitable habitat, elevation limited, and other expert knowledge of the species and its range." [@REF http://www.iucnredlist.org/technical-documents/red-list-training/iucnspatialresources]), it is not presented as a requirement, so we cannot take its inclusion for granted.
+[discussion] Noting from Fig 2B that corals dominate the upper-left "distribution-aligned" quadrant of Fig 2A (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), we chose to examine the effect of explicitly restricting IUCN ranges to depths based on species' life histories.  Corals offer an excellent case study, due to their foundational role in biodiverse habitats, as well as their lack of mobility and reliance on photosynthesis.  Ocean depth preference is explicitly included as a parameter in AquaMaps models.  While depth is recommended by the IUCN as a criterion for providers of range maps ("The limits of distribution can be determined by using known occurrences of the species, along with the knowledge of habitat preferences, remaining suitable habitat, elevation limited, and other expert knowledge of the species and its range." [@iucn_iucn_2015, from website:  http://www.iucnredlist.org/technical-documents/red-list-training/iucnspatialresources]), it is not presented as a requirement, so we cannot take its inclusion for granted.
 
 [results] Fig 3A shows aggregated ranges of the 463 coral species mapped in the IUCN dataset, with their ranges broken into proportional area deeper and shallower than 200 m.  According to IUCN descriptions, none of these species is indicated to occur deeper than 200 m, and 94% are confined to waters shallower than 50 m; seven of the mapped species had no reported depth information.  Clipping coral ranges to shallower than 200 m eliminated an average of 47.6% of the total predicted area while still allowing for a generous estimate of suitable habitat.
 
 > __Fig 3.__ (A) Aggregate map combining ranges of the 463 coral species mapped in the IUCN dataset, showing raw ranges and ranges clipped to 200 m depth. (B) Alignment quadrant breakdown of paired map coral species using original data from IUCN and AquaMaps (as in Fig 2B) and the same species with IUCN ranges clipped to 200 m depth.
 
-[results] In constraining coral ranges to shallow waters, we see a strong increase in the apparent alignment of species maps between IUCN and AquaMaps.  Using the original quadrant definitions from Fig 2B, we see in Fig 3B a massive shift in 354 paired-map coral species due to constraining coral depths to 200 m.  Membership in the "well-aligned" quadrant jumped from 22.4% to 76.2%, with a corresponding decrease in all other quadrants.  See Fig SXXX to examine the shifts of individual species among the quadrants.
+[results] In constraining coral ranges to appropriately shallow waters, we see a strong increase in the apparent alignment of species maps between IUCN and AquaMaps.  Using the original quadrant definitions from Fig 2B, we see in Fig 3B a massive shift in 354 paired-map coral species due to constraining coral depths to 200 m.  Membership in the "well-aligned" quadrant jumped from 22.4% to 76.2%, with a corresponding decrease in all other quadrants.  By excluding the unsuitable areas from IUCN's extent of occurrence, we eliminate preventable commission errors and more closely approximate the area of occupancy described by AquaMaps.  See Fig SXXX to examine the shifts of individual species among the quadrants.
 
-[discussion] We cannot know for certain the true distribution of each of these corals; certainly some commission errors result from satisfying the connectivity requirements of an EOO, and others may be due to experts taking a precautionary approach.  But a sensible shift in method drastically decreases the likelihood of introducing commission errors, with little chance of introducing omission errors, greatly improving our confidence in the remaining reported distributions for most purposes.  Note that this change applies just as readily to the IUCN coral maps that are not included in the paired map analysis, and likely to other reef-associated flora and fauna.  While species depth preferences are an easy and consistent means of constraining range predictions, other conditions such as salinity and temperature could be cautiously used to refine the results of expert opinions.
+[discussion] We cannot know for certain the true distribution of each of these corals; certainly some commission errors result from satisfying the connectivity requirements of an extent of occurrence, and others may be due to experts taking a precautionary approach.  But a sensible shift in method drastically decreases the likelihood of introducing commission errors, with little chance of introducing omission errors, greatly improving our confidence in the remaining reported distributions for most purposes.  Note that this change applies just as readily to the IUCN coral maps that are not included in the paired map analysis, and likely to other reef-associated flora and fauna.  While species depth preferences are an easy and consistent means of constraining range predictions, other conditions such as salinity and temperature could be cautiously used to refine the results of expert opinions.
 
 ## Georegional constraint exploration
 
@@ -102,7 +112,7 @@ The lower left quadrant (quadrant 4) indicates species for which the map pairs a
 
 > __Fig 4.__ Composite map showing AquaMaps predicted ranges for 3,208 species whose equatorial distribution encounters an eastern discontinuity exactly at 175° W, the boundary between FAO Major Fishing Areas 71 and 77 (shown in blue).  Other FAO area boundaries create additional clear discontinuities.
 
-[discussion] FAO Major Fishing Area boundaries provide a readily available method to roughly contrain AquaMaps predictions to appropriate ocean basins, thus eliminating a large source of potential commission errors and enabling rapid modeling of thousands of species ranges.  However, these boundaries are defined for statistical purposes based on economic and political considerations rather than ecological considerations, and can result in odd discontinuities in species range predictions where otherwise suitable habitat is excluded.  While such a discontinuous boundary would likely be obvious when inspecting the distribution of an individual species, the distinction is likely to be obscured when aggregating many species ranges as is typical for biodiversity or conservation studies.  Ecoregional spatial zones such as Marine Ecoregions of the World [@REF???] may provide an additional useful constraint on species ranges; expert review, though time-consuming, is the most certain route to boosting confidence in these predicted distributions.
+[discussion] FAO Major Fishing Area boundaries provide a readily available method to roughly contrain AquaMaps predictions to appropriate ocean basins, thus eliminating a large source of potential commission errors and enabling rapid modeling of thousands of species ranges.  However, these boundaries are defined for statistical purposes based on economic and political considerations rather than ecological considerations, and can result in odd discontinuities in species range predictions where otherwise suitable habitat is excluded.  While such a discontinuous boundary would likely be obvious when inspecting the distribution of an individual species, the distinction is likely to be obscured when aggregating many species ranges as is typical for biodiversity or conservation studies.  Ecoregional spatial zones such as Marine Ecoregions of the World [@spalding_marine_2007] may provide an additional useful constraint on species ranges; expert review, though time-consuming, is the most certain route to boosting confidence in these predicted distributions.
 
 <!-- ## Case Studies
 
@@ -151,18 +161,17 @@ _Given that only `r p_spp_both_ohi`% of Red List-assessed species are included i
 
 ## Case Study: MPA Gap Analysis
 
-Klein et al. [-@klein_shortfalls_2015] compare the global distribution of species to the global distribution of marine protected areas to assess how well current MPAs overlap with species ranges and identify which species fall through gaps in protection.  The study relied on the AquaMaps database, using a probability of occurrence threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  They found that the global MPA network leaves 90.5% of marine species with less than 5% of their overall range represented within MPAs, and 1.4% of species have no protection at all (i.e., "gap" species).
+Klein et al. [-@klein_shortfalls_2015] compare the global distribution of species to the global distribution of marine protected areas to assess how well current MPAs overlap with species ranges and identify which species fall through gaps in protection.  The study relied on the 2014 version of the AquaMaps database, using a probability of occurrence threshold of 50% or greater, to determine species presence, and the World Database of Protected Areas to define zones of marine protection.  They found that the global MPA network leaves 90.5% of marine species with less than 5% of their overall range represented within MPAs, and 1.4% of species have no protection at all (i.e., "gap" species).
 
-We recalculated the amount of under-protected and gap species using either IUCN or AquaMaps data (using the most recent AquaMaps data and a 0% threshold to allow the most meaningful comparison to IUCN's "limits of distribution", <a href = '#fig4'>Fig 4</a>).  We found a five-fold increase in the proportion of gap species (6.4% of species vs. 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% of species vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% of species vs. 1.5%).
+We recalculated the amount of under-protected and gap species using either IUCN or AquaMaps data (using the 2015 AquaMaps data and a 0% threshold to more closely approximate the extent of occurrence represented by IUCN data, <a href = '#fig4'>Fig 4</a>).  We found a five-fold increase in the proportion of gap species (6.4% of species vs. 1.2%) and dramatically larger proportion of species with less than 2% of their range protected (73.2% of species vs. 47.7%).  However, this comparison also indicates a larger proportion of well-protected species with greater than 10% of range protected (2.9% of species vs. 1.5%).
 
-> __Fig 5.__  Percent of species range covered by MPAs based upon methods in Klein et al. (2015).  Scenario 1 replicates the original results, measuring protected range of species in AquaMaps 2014 dataset, with a 50% presence threshold, against the 2014 World Database of Protected Areas, filtered for IUCN categories I-IV that overlap marine areas.  Scenario 2 updates the results using AquaMaps 2015, showing very small changes despite the inclusion of an additional 5,545 species.  Scenario 3, using 2015 AquaMaps data, drops the presence threshold to zero, showing an expected decrease in gap species, but also a decrease in species with 5% or greater protected range.  Scenario 4 adds an additional 1745 species unique to IUCN, resulting in increases in gap species and species with less than 2% coverage.  Scenario 5 examines species MPA coverage using only the IUCN dataset.
+> __Fig 5.__  Percent of species range covered by MPAs based upon methods in Klein et al. (2015).  Scenario 1 replicates the original results, measuring protected range of species in AquaMaps 2014 dataset, with a 50% presence threshold, against the 2014 World Database of Protected Areas, filtered for IUCN categories I-IV that overlap marine areas.  Scenario 2 updates the results using AquaMaps 2015, showing very small changes despite the inclusion of an additional 5,545 species.  Scenario 3, using 2015 AquaMaps data, drops the presence threshold to zero, showing an expected decrease in gap species, but also a decrease in species with 5% or greater protected range.  Scenario 4 examines species MPA coverage using only the IUCN dataset.
 
-[discussion?]
 
-[can this wrap up the results/discussion?] To achieve more comprehensive global coverage of species ranges these two datasets can be used together, understanding that the underlying differences complicate such direct comparisons.  Major considerations include aligning the criteria used to determine "presence" (e.g. selecting an appropriate presence threshold for AquaMaps; _a presence threshold of 0% most closely approximates the "limits of distribution" criterion described by IUCN range maps_ ___- not really discussed or backed up here___) and addressing mechanisms that introduce errors of commission and omission. ___as it stands, this paper really doesn't go into combining datasets and how to do it; omit this paragraph?___
+To achieve more comprehensive global coverage of species ranges it may be desirable to use these two datasets together, as the Ocean Health Index (OHI) does to calculate scores for its Species goal [@halpern_index_2012; @halpern_patterns_2015] ___should I even mention this here, since I do not provide details?___  Trimming unsuitable habitat from the IUCN's extent of occurrence, for example by explicitly clipping map to appropriate depths for corals, would result in maps that more closely approximate areas of occupancy.  Conversely, including all AquaMaps cells with a non-zero "probability of occurrence" (rather than using a probability threshold to determine presence, e.g. greater than 40% for the Ocean Health Index [@halpern_index_2012; @halpern_patterns_2015] or 50% for the MPA gap analysis [@klein_shortfalls_2015]),  would result in maps that more closely, though still imperfectly, approximate extents of occurrence.
 
 # Conclusions
 
-No spatial dataset can ever claim to know the "truth" of the whole of marine biodiversity.  AquaMaps and IUCN range maps show strong agreement for many well-studied species, but substantial differences illustrate uncertainty in our understanding of spatial distribution for many others.  Although many other approaches exist for species distribution modeling, these two are the largest approaches applied globally across a broad range of marine taxa.  Method-driven differences in commission and omission errors produce clear and significant disagreement in species range descriptions between AquaMaps and IUCN datasets.  Conclusions drawn from each of these datasets would paint dramatically different pictures of global marine biodiversity or the effectiveness of conservation management decisions.  Identifying and addressing differences in these datasets will increase their utility for research and conservation actions.
+No spatial dataset can ever claim to know the "truth" of the whole of marine biodiversity.  AquaMaps and IUCN range maps show strong agreement for many well-studied species, but for many others, substantial differences arise from differences in methodology and intent of each dataset.  Although other approaches exist for predicting species distribution, these two are the largest approaches applied globally across a broad range of marine taxa.  Recognizing and acknowledging the advantages and intended purposes of the range maps presented by these datasets will increase their utility for research and conservation actions.  Conclusions drawn from each of these datasets could paint dramatically different pictures of global marine biodiversity or the effectiveness of conservation management decisions.
 
-Effective management and protection of marine species depends on a robust understanding of where species exist and where they do not; without this knowledge we risk wasting resources protecting low-value regions while missing opportunities to protect critical ones. By identifying the differences between these two important and fundamentally different marine species range datasets and understanding the likely mechanisms causing these discrepancies, we improve our ability to develop strategic and effective conservation policy that supports a resilient ocean ecosystem.
+Effective management and protection of marine species depends on a robust understanding of where species exist and where they do not; without this knowledge we risk wasting resources protecting low-value regions while missing opportunities to protect critical ones. By understanding the distinctions between these two important and fundamentally different marine species range datasets, we improve our ability to inform strategic and effective conservation policy that supports a resilient ocean ecosystem.
