--- a/refs/zotero_lib.bib
+++ b/refs/zotero_lib.bib
@@ -1,62 +1,72 @@
 
-@software{r_core_team_r:_2016,
-	location = {Vienna, Austria},
-	title = {R: A language and environment for statistical computing},
+@article{gaston_sizes_2009,
+	title = {The sizes of species’ geographic ranges},
+	volume = {46},
+	issn = {00218901, 13652664},
+	url = {http://doi.wiley.com/10.1111/j.1365-2664.2008.01596.x},
+	doi = {10.1111/j.1365-2664.2008.01596.x},
+	language = {en},
+	number = {1},
+	urldate = {2016-09-11},
+	journal = {Journal of Applied Ecology},
+	author = {Gaston, Kevin J. and Fuller, Richard A.},
+	month = feb,
+	year = {2009},
+	pages = {1--9},
+	file = {Gaston_et_al-2009-Journal_of_Applied_Ecology.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/C8F5M9JC/Gaston_et_al-2009-Journal_of_Applied_Ecology.pdf:application/pdf}
+}
+
+@misc{r_core_team_r:_2016,
+	address = {Vienna, Austria},
+	title = {R: {A} language and environment for statistical computing},
 	url = {https://www.R-project.org},
-	version = {3.3.0},
 	publisher = {R Foundation for Statistical Computing},
 	author = {{R Core Team}},
-	date = {2016-05-03}
+	month = may,
+	year = {2016}
 }
 
 @article{kaschner_current_2011,
-	title = {Current and Future Patterns of Global Marine Mammal Biodiversity},
+	title = {Current and {Future} {Patterns} of {Global} {Marine} {Mammal} {Biodiversity}},
 	volume = {6},
 	issn = {1932-6203},
 	url = {http://dx.plos.org/10.1371/journal.pone.0019653},
 	doi = {10.1371/journal.pone.0019653},
-	pages = {e19653},
+	language = {en},
 	number = {5},
-	journaltitle = {{PLoS} {ONE}},
+	urldate = {2016-05-06},
+	journal = {PLoS ONE},
 	author = {Kaschner, Kristin and Tittensor, Derek P. and Ready, Jonathan and Gerrodette, Tim and Worm, Boris},
 	editor = {Bograd, Steven J.},
-	urldate = {2016-05-06},
-	date = {2011-05-23},
-	langid = {english},
-	file = {Kaschner_etal2011.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/5V77R9D9/Kaschner_etal2011.pdf:application/pdf}
+	month = may,
+	year = {2011},
+	pages = {e19653},
+	file = {Kaschner_etal2011.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/5V77R9D9/Kaschner_etal2011.pdf:application/pdf}
 }
 
-@article{selig_assessing_2013,
-	title = {Assessing Global Marine Biodiversity Status within a Coupled Socio-Ecological Perspective},
-	volume = {8},
-	issn = {1932-6203},
-	url = {http://dx.plos.org/10.1371/journal.pone.0060284},
-	doi = {10.1371/journal.pone.0060284},
-	pages = {e60284},
-	number = {4},
-	journaltitle = {{PLoS} {ONE}},
-	author = {Selig, Elizabeth R. and Longo, Catherine and Halpern, Benjamin S. and Best, Benjamin D. and Hardy, Darren and Elfes, Cristiane T. and Scarborough, Courtney and Kleisner, Kristin M. and Katona, Steven K.},
-	editor = {Guichard, Frédéric},
-	urldate = {2016-05-11},
-	date = {2013-04-11},
-	langid = {english},
-	file = {2013 Selig biodiversity assessment.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/PP34GGVN/2013 Selig biodiversity assessment.pdf:application/pdf}
+@misc{fao_fisheries_and_aquaculture_department_cwp_2015,
+	title = {{CWP} {Handbook} of {Fishery} {Statistical} {Standards}. {Section} {H}: {FISHING} {AREAS} {FOR} {STATISTICAL} {PURPOSES}},
+	publisher = {Food and Agriculture Organization of the United Nations},
+	author = {{FAO Fisheries and Aquaculture Department}},
+	month = feb,
+	year = {2015}
 }
 
 @article{jones_modelling_2012,
-	title = {Modelling commercial fish distributions: Prediction and assessment using different approaches},
+	title = {Modelling commercial fish distributions: {Prediction} and assessment using different approaches},
 	volume = {225},
 	issn = {03043800},
+	shorttitle = {Modelling commercial fish distributions},
 	url = {http://linkinghub.elsevier.com/retrieve/pii/S0304380011005217},
 	doi = {10.1016/j.ecolmodel.2011.11.003},
-	shorttitle = {Modelling commercial fish distributions},
-	pages = {133--145},
-	journaltitle = {Ecological Modelling},
-	author = {Jones, Miranda C. and Dye, Stephen R. and Pinnegar, John K. and Warren, Rachel and Cheung, William W.L.},
+	language = {en},
 	urldate = {2016-05-06},
-	date = {2012-01},
-	langid = {english},
-	file = {Jones_etal2012.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/7DR7W4HZ/Jones_etal2012.pdf:application/pdf}
+	journal = {Ecological Modelling},
+	author = {Jones, Miranda C. and Dye, Stephen R. and Pinnegar, John K. and Warren, Rachel and Cheung, William W.L.},
+	month = jan,
+	year = {2012},
+	pages = {133--145},
+	file = {Jones_etal2012.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/7DR7W4HZ/Jones_etal2012.pdf:application/pdf}
 }
 
 @article{halpern_index_2012,
@@ -65,36 +75,38 @@
 	issn = {0028-0836, 1476-4687},
 	url = {http://www.nature.com/doifinder/10.1038/nature11397},
 	doi = {10.1038/nature11397},
-	pages = {615--620},
 	number = {7413},
-	journaltitle = {Nature},
-	author = {Halpern, Benjamin S. and Longo, Catherine and Hardy, Darren and {McLeod}, Karen L. and Samhouri, Jameal F. and Katona, Steven K. and Kleisner, Kristin and Lester, Sarah E. and O’Leary, Jennifer and Ranelletti, Marla and Rosenberg, Andrew A. and Scarborough, Courtney and Selig, Elizabeth R. and Best, Benjamin D. and Brumbaugh, Daniel R. and Chapin, F. Stuart and Crowder, Larry B. and Daly, Kendra L. and Doney, Scott C. and Elfes, Cristiane and Fogarty, Michael J. and Gaines, Steven D. and Jacobsen, Kelsey I. and Karrer, Leah Bunce and Leslie, Heather M. and Neeley, Elizabeth and Pauly, Daniel and Polasky, Stephen and Ris, Bud and St Martin, Kevin and Stone, Gregory S. and Sumaila, U. Rashid and Zeller, Dirk},
 	urldate = {2016-05-11},
-	date = {2012-08-15},
-	file = {2012 Halpern Ocean Health Index.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/PCFCG78A/2012 Halpern Ocean Health Index.pdf:application/pdf}
+	journal = {Nature},
+	author = {Halpern, Benjamin S. and Longo, Catherine and Hardy, Darren and McLeod, Karen L. and Samhouri, Jameal F. and Katona, Steven K. and Kleisner, Kristin and Lester, Sarah E. and O’Leary, Jennifer and Ranelletti, Marla and Rosenberg, Andrew A. and Scarborough, Courtney and Selig, Elizabeth R. and Best, Benjamin D. and Brumbaugh, Daniel R. and Chapin, F. Stuart and Crowder, Larry B. and Daly, Kendra L. and Doney, Scott C. and Elfes, Cristiane and Fogarty, Michael J. and Gaines, Steven D. and Jacobsen, Kelsey I. and Karrer, Leah Bunce and Leslie, Heather M. and Neeley, Elizabeth and Pauly, Daniel and Polasky, Stephen and Ris, Bud and St Martin, Kevin and Stone, Gregory S. and Sumaila, U. Rashid and Zeller, Dirk},
+	month = aug,
+	year = {2012},
+	pages = {615--620},
+	file = {2012 Halpern Ocean Health Index.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/PCFCG78A/2012 Halpern Ocean Health Index.pdf:application/pdf}
 }
 
-@online{obis_data_2016,
-	title = {Data from the Ocean Biogeographic Information System},
+@misc{obis_data_2016,
+	title = {Data from the {Ocean} {Biogeographic} {Information} {System}},
 	url = {http://www.iobis.org},
-	titleaddon = {Intergovernmental Oceanographic Commission of {UNESCO}},
-	author = {{OBIS}},
 	urldate = {2016-02-29},
-	date = {2016}
+	journal = {Intergovernmental Oceanographic Commission of UNESCO},
+	author = {{OBIS}},
+	year = {2016}
 }
 
 @misc{_iucn_metadata.pdf_????,
 	title = {{IUCN}\_METADATA.pdf},
-	file = {IUCN_METADATA.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/A3UJ9BFF/IUCN_METADATA.pdf:application/pdf}
+	file = {IUCN_METADATA.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/A3UJ9BFF/IUCN_METADATA.pdf:application/pdf}
 }
 
-@report{martin_manual_2014,
+@techreport{martin_manual_2014,
 	title = {Manual of marine and coastal datasets of biodiversity importance},
-	institution = {United Nations Environment Programme},
-	author = {Martin, {CS} and Fletcher, R and Jones, {MC} and Kaschner, Kristin and Sullivan, E and Tittensor, Derek P. and Mcowen, C and Geffert, {JL} and van Bochove, {JW} and Thomas, H and Blyth, S and Ravilious, C and Tolley, M and Stanwell-Smith, D},
 	urldate = {2015-12-22},
-	date = {2014-05},
-	file = {Martin et al, 2014, WCMC Report.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/JJQEFBSZ/Martin et al, 2014, WCMC Report.pdf:application/pdf}
+	institution = {United Nations Environment Programme},
+	author = {Martin, CS and Fletcher, R and Jones, MC and Kaschner, Kristin and Sullivan, E and Tittensor, Derek P. and Mcowen, C and Geffert, JL and van Bochove, JW and Thomas, H and Blyth, S and Ravilious, C and Tolley, M and Stanwell-Smith, D},
+	month = may,
+	year = {2014},
+	file = {Martin et al, 2014, WCMC Report.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/JJQEFBSZ/Martin et al, 2014, WCMC Report.pdf:application/pdf}
 }
 
 @article{ready_predicting_2010,
@@ -103,71 +115,89 @@
 	issn = {03043800},
 	url = {http://linkinghub.elsevier.com/retrieve/pii/S030438000900711X},
 	doi = {10.1016/j.ecolmodel.2009.10.025},
-	pages = {467--478},
+	language = {en},
 	number = {3},
-	journaltitle = {Ecological Modelling},
-	author = {Ready, Jonathan and Kaschner, Kristin and South, Andy B. and Eastwood, Paul D. and Rees, Tony and Rius, Josephine and Agbayani, Eli and Kullander, Sven and Froese, Rainer},
 	urldate = {2016-05-06},
-	date = {2010-02},
-	langid = {english},
-	file = {Ready_etal2010.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/297AD2JJ/Ready_etal2010.pdf:application/pdf}
+	journal = {Ecological Modelling},
+	author = {Ready, Jonathan and Kaschner, Kristin and South, Andy B. and Eastwood, Paul D. and Rees, Tony and Rius, Josephine and Agbayani, Eli and Kullander, Sven and Froese, Rainer},
+	month = feb,
+	year = {2010},
+	pages = {467--478},
+	file = {Ready_etal2010.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/297AD2JJ/Ready_etal2010.pdf:application/pdf}
 }
 
 @article{pimm_biodiversity_2014,
 	title = {The biodiversity of species and their rates of extinction, distribution, and protection},
 	volume = {344},
 	doi = {10.1126/science.1246752},
-	pages = {1246752--1 -- 1246752--10},
 	number = {6187},
-	journaltitle = {Science},
+	journal = {Science},
 	author = {Pimm, S L and Jenkins, C N and Abell, R and Brooks, T M and Gittleman, J L and Joppa, L N and Raven, P H and Roberts, C M and Sexton, J O},
-	date = {2014-05-30},
-	file = {Pimm_etal2014.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/XE8T2HVX/Pimm_etal2014.pdf:application/pdf}
+	month = may,
+	year = {2014},
+	pages = {1246752--1 -- 1246752--10},
+	file = {Pimm_etal2014.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/XE8T2HVX/Pimm_etal2014.pdf:application/pdf}
 }
 
-@online{gbif_global_2010,
-	title = {Global Biodiversity Information Facility ({GBIF}) Memorandum of Understanding},
+@misc{gbif_global_2010,
+	title = {Global {Biodiversity} {Information} {Facility} ({GBIF}) {Memorandum} of {Understanding}},
 	url = {http://www.gbif.org/resource/80661},
-	titleaddon = {Global Biodiversity Information Facility},
-	author = {{GBIF}},
 	urldate = {2016-02-29},
-	date = {2010}
+	journal = {Global Biodiversity Information Facility},
+	author = {{GBIF}},
+	year = {2010}
 }
 
-@online{kaschner_aquamaps:_2015,
-	title = {{AquaMaps}: Predicted range maps for aquatic species},
+@article{rodrigues_global_2004,
+	title = {Global gap analysis: priority regions for expanding the global protected-area network},
+	volume = {54},
+	shorttitle = {Global gap analysis},
+	url = {http://bioscience.oxfordjournals.org/content/54/12/1092.short},
+	number = {12},
+	urldate = {2016-09-11},
+	journal = {BioScience},
+	author = {Rodrigues, Ana SL and Akcakaya, H. Resit and Andelman, Sandy J. and Bakarr, Mohamed I. and Boitani, Luigi and Brooks, Thomas M. and Chanson, Janice S. and Fishpool, Lincoln DC and Da Fonseca, Gustavo AB and Gaston, Kevin J. and {others}},
+	year = {2004},
+	pages = {1092--1100},
+	file = {2004 Rodrigues et al. , Global Gap Analysis Priority.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/FH63IU4V/2004 Rodrigues et al. , Global Gap Analysis Priority.pdf:application/pdf}
+}
+
+@misc{kaschner_aquamaps:_2015,
+	title = {{AquaMaps}: {Predicted} range maps for aquatic species},
 	url = {www.aquamaps.org},
-	author = {Kaschner, Kristin and Rius-Barile, Josephine and Kesner-Reyes, Kathleen and Garilao, C and Kullander, Sven and Rees, Tony and Froese, Rainer},
 	urldate = {2015-12-21},
-	date = {2015-08}
+	author = {Kaschner, Kristin and Rius-Barile, Josephine and Kesner-Reyes, Kathleen and Garilao, C and Kullander, Sven and Rees, Tony and Froese, Rainer},
+	month = aug,
+	year = {2015}
 }
 
 @article{rondinini_tradeoffs_2006,
-	title = {Tradeoffs of different types of species occurrence data for use in systematic conservation planning: Species data for conservation planning},
+	title = {Tradeoffs of different types of species occurrence data for use in systematic conservation planning: {Species} data for conservation planning},
 	volume = {9},
 	issn = {1461023X},
+	shorttitle = {Tradeoffs of different types of species occurrence data for use in systematic conservation planning},
 	url = {http://doi.wiley.com/10.1111/j.1461-0248.2006.00970.x},
 	doi = {10.1111/j.1461-0248.2006.00970.x},
-	shorttitle = {Tradeoffs of different types of species occurrence data for use in systematic conservation planning},
-	pages = {1136--1145},
+	language = {en},
 	number = {10},
-	journaltitle = {Ecology Letters},
-	author = {Rondinini, Carlo and Wilson, Kerrie A. and Boitani, Luigi and Grantham, Hedley and Possingham, Hugh P.},
 	urldate = {2016-05-06},
-	date = {2006-10},
-	langid = {english},
-	file = {Rondinini_et_al-2006-Ecology_Letters.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/9AAJQUQT/Rondinini_et_al-2006-Ecology_Letters.pdf:application/pdf}
+	journal = {Ecology Letters},
+	author = {Rondinini, Carlo and Wilson, Kerrie A. and Boitani, Luigi and Grantham, Hedley and Possingham, Hugh P.},
+	month = oct,
+	year = {2006},
+	pages = {1136--1145},
+	file = {Rondinini_et_al-2006-Ecology_Letters.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/9AAJQUQT/Rondinini_et_al-2006-Ecology_Letters.pdf:application/pdf}
 }
 
 @article{hurlbert_species_2007,
 	title = {Species richness, hotspots, and the scale dependence of range maps in ecology and conservation},
 	volume = {104},
-	pages = {13384--13389},
 	number = {33},
-	journaltitle = {Proceedings of the National Academy of Sciences},
+	journal = {Proceedings of the National Academy of Sciences},
 	author = {Hurlbert, Allen H. and Jetz, Walter},
-	date = {2007},
-	file = {Hurlbert_2007.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/JKUWNNZG/Hurlbert_2007.pdf:application/pdf}
+	year = {2007},
+	pages = {13384--13389},
+	file = {Hurlbert_2007.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/JKUWNNZG/Hurlbert_2007.pdf:application/pdf}
 }
 
 @article{halpern_spatial_2015,
@@ -176,48 +206,50 @@
 	issn = {2041-1723},
 	url = {http://www.nature.com/doifinder/10.1038/ncomms8615},
 	doi = {10.1038/ncomms8615},
-	pages = {7615},
-	journaltitle = {Nature Communications},
-	author = {Halpern, Benjamin S. and Frazier, Melanie and Potapenko, John and Casey, Kenneth S. and Koenig, Kellee and Longo, Catherine and Lowndes, Julia Stewart and Rockwood, R. Cotton and Selig, Elizabeth R. and Selkoe, Kimberly A. and Walbridge, Shaun},
 	urldate = {2016-05-11},
-	date = {2015-07-14},
-	file = {2015 Halpern CHI update.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/VPAW5DXM/2015 Halpern CHI update.pdf:application/pdf}
+	journal = {Nature Communications},
+	author = {Halpern, Benjamin S. and Frazier, Melanie and Potapenko, John and Casey, Kenneth S. and Koenig, Kellee and Longo, Catherine and Lowndes, Julia Stewart and Rockwood, R. Cotton and Selig, Elizabeth R. and Selkoe, Kimberly A. and Walbridge, Shaun},
+	month = jul,
+	year = {2015},
+	pages = {7615},
+	file = {2015 Halpern CHI update.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/VPAW5DXM/2015 Halpern CHI update.pdf:application/pdf}
 }
 
 @article{jetz_ecological_2008,
-	title = {Ecological Correlates and Conservation Implications of Overestimating Species Geographic Ranges: \textit{Overestimation of Species Ranges}},
+	title = {Ecological {Correlates} and {Conservation} {Implications} of {Overestimating} {Species} {Geographic} {Ranges}: \textit{{Overestimation} of {Species} {Ranges}}},
 	volume = {22},
 	issn = {08888892},
+	shorttitle = {Ecological {Correlates} and {Conservation} {Implications} of {Overestimating} {Species} {Geographic} {Ranges}},
 	url = {http://doi.wiley.com/10.1111/j.1523-1739.2007.00847.x},
 	doi = {10.1111/j.1523-1739.2007.00847.x},
-	shorttitle = {Ecological Correlates and Conservation Implications of Overestimating Species Geographic Ranges},
-	pages = {110--119},
+	language = {en},
 	number = {1},
-	journaltitle = {Conservation Biology},
-	author = {Jetz, Walter and Sekercioglu, Cagan H. and Watson, James E. M.},
 	urldate = {2016-05-06},
-	date = {2008-02},
-	langid = {english},
-	file = {JETZ_et_al-2008-Conservation_Biology.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/98E2XCR8/JETZ_et_al-2008-Conservation_Biology.pdf:application/pdf}
+	journal = {Conservation Biology},
+	author = {Jetz, Walter and Sekercioglu, Cagan H. and Watson, James E. M.},
+	month = feb,
+	year = {2008},
+	pages = {110--119},
+	file = {JETZ_et_al-2008-Conservation_Biology.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/98E2XCR8/JETZ_et_al-2008-Conservation_Biology.pdf:application/pdf}
 }
 
 @article{brown_ecological_2015,
 	title = {Ecological and methodological drivers of species’ distribution and phenology responses to climate change},
 	url = {http://onlinelibrary.wiley.com/doi/10.1111/gcb.13184/full},
-	journaltitle = {Global change biology},
-	author = {Brown, Christopher J. and O'Connor, Mary I. and Poloczanska, Elvira S. and Schoeman, David S. and Buckley, Lauren B. and Burrows, Michael T. and Duarte, Carlos M. and Halpern, Benjamin S. and Pandolfi, John M. and Parmesan, Camille and {others}},
 	urldate = {2016-05-06},
-	date = {2015},
-	file = {Brown_etal in press measuring distribution and phenology change.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/WE83VEI8/Brown_etal in press measuring distribution and phenology change.pdf:application/pdf}
+	journal = {Global change biology},
+	author = {Brown, Christopher J. and O'Connor, Mary I. and Poloczanska, Elvira S. and Schoeman, David S. and Buckley, Lauren B. and Burrows, Michael T. and Duarte, Carlos M. and Halpern, Benjamin S. and Pandolfi, John M. and Parmesan, Camille and {others}},
+	year = {2015},
+	file = {Brown_etal in press measuring distribution and phenology change.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/WE83VEI8/Brown_etal in press measuring distribution and phenology change.pdf:application/pdf}
 }
 
-@online{iucn_iucn_2015,
-	title = {The {IUCN} Red List of Threatened Species},
+@misc{iucn_iucn_2015,
+	title = {The {IUCN} {Red} {List} of {Threatened} {Species}},
 	url = {http://www.iucnredlist.org},
-	titleaddon = {International Union for the Conservation of Nature},
-	author = {{IUCN}},
 	urldate = {2015-12-21},
-	date = {2015}
+	journal = {International Union for the Conservation of Nature},
+	author = {{IUCN}},
+	year = {2015}
 }
 
 @article{klein_shortfalls_2015,
@@ -226,12 +258,13 @@
 	issn = {2045-2322},
 	url = {http://www.nature.com/articles/srep17539},
 	doi = {10.1038/srep17539},
-	pages = {17539},
-	journaltitle = {Scientific Reports},
-	author = {Klein, Carissa J. and Brown, Christopher J. and Halpern, Benjamin S. and Segan, Daniel B. and {McGowan}, Jennifer and Beger, Maria and Watson, James E.M.},
 	urldate = {2016-05-06},
-	date = {2015-12-03},
-	file = {Klein_etal_2015_MPA.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/RA785KKM/Klein_etal_2015_MPA.pdf:application/pdf}
+	journal = {Scientific Reports},
+	author = {Klein, Carissa J. and Brown, Christopher J. and Halpern, Benjamin S. and Segan, Daniel B. and McGowan, Jennifer and Beger, Maria and Watson, James E.M.},
+	month = dec,
+	year = {2015},
+	pages = {17539},
+	file = {Klein_etal_2015_MPA.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/RA785KKM/Klein_etal_2015_MPA.pdf:application/pdf}
 }
 
 @article{tittensor_global_2010,
@@ -240,106 +273,102 @@
 	issn = {0028-0836, 1476-4687},
 	url = {http://www.nature.com/doifinder/10.1038/nature09329},
 	doi = {10.1038/nature09329},
-	pages = {1098--1101},
 	number = {7310},
-	journaltitle = {Nature},
-	author = {Tittensor, Derek P. and Mora, Camilo and Jetz, Walter and Lotze, Heike K. and Ricard, Daniel and Berghe, Edward Vanden and Worm, Boris},
 	urldate = {2016-05-06},
-	date = {2010-08-26},
-	file = {Tittensor et al 2010.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/G2K25DJR/Tittensor et al 2010.pdf:application/pdf;Tittensor et al 2010 SuppMat.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/45E9TFEW/Tittensor et al 2010 SuppMat.pdf:application/pdf}
+	journal = {Nature},
+	author = {Tittensor, Derek P. and Mora, Camilo and Jetz, Walter and Lotze, Heike K. and Ricard, Daniel and Berghe, Edward Vanden and Worm, Boris},
+	month = aug,
+	year = {2010},
+	pages = {1098--1101},
+	file = {Tittensor et al 2010.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/G2K25DJR/Tittensor et al 2010.pdf:application/pdf;Tittensor et al 2010 SuppMat.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/45E9TFEW/Tittensor et al 2010 SuppMat.pdf:application/pdf}
 }
 
-@article{selig_assessing_2013-1,
-	title = {Assessing Global Marine Biodiversity Status within a Coupled Socio-Ecological Perspective},
+@article{selig_assessing_2013,
+	title = {Assessing {Global} {Marine} {Biodiversity} {Status} within a {Coupled} {Socio}-{Ecological} {Perspective}},
 	volume = {8},
 	issn = {1932-6203},
 	url = {http://dx.plos.org/10.1371/journal.pone.0060284},
 	doi = {10.1371/journal.pone.0060284},
-	pages = {e60284},
+	language = {en},
 	number = {4},
-	journaltitle = {{PLoS} {ONE}},
+	urldate = {2016-05-06},
+	journal = {PLoS ONE},
 	author = {Selig, Elizabeth R. and Longo, Catherine and Halpern, Benjamin S. and Best, Benjamin D. and Hardy, Darren and Elfes, Cristiane T. and Scarborough, Courtney and Kleisner, Kristin M. and Katona, Steven K.},
 	editor = {Guichard, Frédéric},
-	urldate = {2016-05-06},
-	date = {2013-04-11},
-	langid = {english},
-	file = {2013 Selig biodiversity assessment.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/NNIKXUI9/2013 Selig biodiversity assessment.pdf:application/pdf}
+	month = apr,
+	year = {2013},
+	pages = {e60284},
+	file = {2013 Selig biodiversity assessment.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/NNIKXUI9/2013 Selig biodiversity assessment.pdf:application/pdf}
 }
 
 @article{halpern_patterns_2015,
-	title = {Patterns and Emerging Trends in Global Ocean Health},
+	title = {Patterns and {Emerging} {Trends} in {Global} {Ocean} {Health}},
 	volume = {10},
 	issn = {1932-6203},
 	url = {http://dx.plos.org/10.1371/journal.pone.0117863},
 	doi = {10.1371/journal.pone.0117863},
-	pages = {e0117863},
+	language = {en},
 	number = {3},
-	journaltitle = {{PLOS} {ONE}},
+	urldate = {2016-05-11},
+	journal = {PLOS ONE},
 	author = {Halpern, Benjamin S. and Longo, Catherine and Lowndes, Julia S. Stewart and Best, Benjamin D. and Frazier, Melanie and Katona, Steven K. and Kleisner, Kristin M. and Rosenberg, Andrew A. and Scarborough, Courtney and Selig, Elizabeth R.},
 	editor = {Tsikliras, Athanassios C.},
-	urldate = {2016-05-11},
-	date = {2015-03-16},
-	langid = {english},
-	file = {2015 Halpern OHI.PDF:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/KPD44SXB/2015 Halpern OHI.PDF:application/pdf}
+	month = mar,
+	year = {2015},
+	pages = {e0117863},
+	file = {2015 Halpern OHI.PDF:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/KPD44SXB/2015 Halpern OHI.PDF:application/pdf}
 }
 
 @article{kaschner_mapping_2006,
 	title = {Mapping world-wide distributions of marine mammal species using a relative environmental suitability ({RES}) model},
 	volume = {316},
 	url = {http://www.vliz.be/imisdocs/publications/100462.pdf},
-	pages = {2--3},
-	number = {285},
-	journaltitle = {Marine Ecology Progress Series},
-	author = {Kaschner, K. and Watson, R\_ and Trites, A. W. and Pauly, D. and {others}},
+	number = {285-310},
 	urldate = {2016-05-06},
-	date = {2006},
-	file = {Kaschner_etal2006.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/FSJ5BPPX/Kaschner_etal2006.pdf:application/pdf}
+	journal = {Marine Ecology Progress Series},
+	author = {Kaschner, K. and Watson, R\_ and Trites, A. W. and Pauly, D. and {others}},
+	year = {2006},
+	pages = {2--3},
+	file = {Kaschner_etal2006.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/FSJ5BPPX/Kaschner_etal2006.pdf:application/pdf}
 }
 
-@article{mora_projected_2013,
-	title = {The projected timing of climate departure from recent variability},
-	volume = {502},
-	issn = {0028-0836},
-	url = {http://dx.doi.org/10.1038/nature12540},
-	abstract = {Ecological and societal disruptions by modern climate change are critically determined by the time frame over which climates shift beyond historical analogues. Here we present a new index of the year when the projected mean climate of a given location moves to a state continuously outside the bounds of historical variability under alternative greenhouse gas emissions scenarios. Using 1860 to 2005 as the historical period, this index has a global mean of 2069 ([plusmn]18[thinsp]years s.d.) for near-surface air temperature under an emissions stabilization scenario and 2047 ([plusmn]14[thinsp]years s.d.) under a /`business-as-usual/' scenario. Unprecedented climates will occur earliest in the tropics and among low-income countries, highlighting the vulnerability of global biodiversity and the limited governmental capacity to respond to the impacts of climate change. Our findings shed light on the urgency of mitigating greenhouse gas emissions if climates potentially harmful to biodiversity and society are to be prevented.},
-	pages = {183--187},
-	number = {7470},
-	journaltitle = {Nature},
-	shortjournal = {Nature},
-	author = {Mora, Camilo and Frazier, Abby G. and Longman, Ryan J. and Dacks, Rachel S. and Walton, Maya M. and Tong, Eric J. and Sanchez, Joseph J. and Kaiser, Lauren R. and Stender, Yuko O. and Anderson, James M. and Ambrosino, Christine M. and Fernandez-Silva, Iria and Giuseffi, Louise M. and Giambelluca, Thomas W.},
-	date = {2013-10-10}
-}
-
-@software{qgis_development_team_qgis_2015,
-	title = {{QGIS} Geographic Information System},
+@misc{qgis_development_team_qgis_2015,
+	title = {{QGIS} {Geographic} {Information} {System}},
 	url = {http://qgis.osgeo.org},
-	version = {2.6.1},
 	publisher = {Open Source Geospatial Foundation Project},
 	author = {{QGIS Development Team}},
-	date = {2015}
+	year = {2015}
 }
 
-@online{iucn_world_2014,
-	title = {The World Database on Protected Areas ({WDPA})},
+@misc{iucn_world_2014,
+	title = {The {World} {Database} on {Protected} {Areas} ({WDPA})},
 	url = {www.protectedplanet.net},
-	titleaddon = {Cambridge, {UK}: {UNEP}-{WCMC}},
-	author = {{IUCN} and {UNEP-WCMC}},
 	urldate = {2014-12-01},
-	date = {2014}
+	journal = {Cambridge, UK: UNEP-WCMC},
+	author = {{IUCN} and {UNEP-WCMC}},
+	year = {2014}
+}
+
+@article{scott_chamberlain_taxize_2013,
+	title = {taxize - taxonomic search and retrieval in {R}},
+	url = {http://f1000research.com/articles/2-191/v2},
+	journal = {F1000Research},
+	author = {{Scott Chamberlain} and {Eduard Szocs}},
+	year = {2013}
 }
 
 @article{spalding_marine_2007,
 	title = {Marine ecoregions of the world: a bioregionalization of coastal and shelf areas},
 	volume = {57},
-	url = {https://bioscience.oxfordjournals.org/content/57/7/573.full},
 	shorttitle = {Marine ecoregions of the world},
-	pages = {573--583},
+	url = {https://bioscience.oxfordjournals.org/content/57/7/573.full},
 	number = {7},
-	journaltitle = {{BioScience}},
-	author = {Spalding, Mark D. and Fox, Helen E. and Allen, Gerald R. and Davidson, Nick and Ferdaña, Zach A. and Finlayson, M. A. X. and Halpern, Benjamin S. and Jorge, Miguel A. and Lombana, A. L. and Lourie, Sara A. and {others}},
 	urldate = {2016-05-11},
-	date = {2007},
-	file = {BioScience-2007-Spalding-573-83.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/Z2PEVRXK/BioScience-2007-Spalding-573-83.pdf:application/pdf}
+	journal = {BioScience},
+	author = {Spalding, Mark D. and Fox, Helen E. and Allen, Gerald R. and Davidson, Nick and Ferdaña, Zach A. and Finlayson, M. A. X. and Halpern, Benjamin S. and Jorge, Miguel A. and Lombana, A. L. and Lourie, Sara A. and {others}},
+	year = {2007},
+	pages = {573--583},
+	file = {BioScience-2007-Spalding-573-83.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/Z2PEVRXK/BioScience-2007-Spalding-573-83.pdf:application/pdf}
 }
 
 @article{bellard_global_2016,
@@ -348,32 +377,41 @@
 	issn = {0962-8452, 1471-2954},
 	url = {http://rspb.royalsocietypublishing.org/lookup/doi/10.1098/rspb.2015.2454},
 	doi = {10.1098/rspb.2015.2454},
-	pages = {20152454},
+	language = {en},
 	number = {1823},
-	journaltitle = {Proceedings of the Royal Society B: Biological Sciences},
-	author = {Bellard, C. and Genovesi, P. and Jeschke, J. M.},
 	urldate = {2016-05-06},
-	date = {2016-01-27},
-	langid = {english},
-	file = {Bellard et al. 2016.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/TVWNHQ67/Bellard et al. 2016.pdf:application/pdf}
+	journal = {Proceedings of the Royal Society B: Biological Sciences},
+	author = {Bellard, C. and Genovesi, P. and Jeschke, J. M.},
+	month = jan,
+	year = {2016},
+	pages = {20152454},
+	file = {Bellard et al. 2016.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/TVWNHQ67/Bellard et al. 2016.pdf:application/pdf}
+}
+
+@misc{birdlife_international_and_natureserve_bird_2015,
+	title = {Bird species distribution maps of the world},
+	publisher = {BirdLife International, Cambridge, UK and NatureServe, Arlington, USA},
+	author = {{BirdLife International and NatureServe}},
+	year = {2015}
 }
 
 @article{coll_biodiversity_2010,
-	title = {The Biodiversity of the Mediterranean Sea: Estimates, Patterns, and Threats},
+	title = {The {Biodiversity} of the {Mediterranean} {Sea}: {Estimates}, {Patterns}, and {Threats}},
 	volume = {5},
 	issn = {1932-6203},
+	shorttitle = {The {Biodiversity} of the {Mediterranean} {Sea}},
 	url = {http://dx.plos.org/10.1371/journal.pone.0011842},
 	doi = {10.1371/journal.pone.0011842},
-	shorttitle = {The Biodiversity of the Mediterranean Sea},
-	pages = {e11842},
+	language = {en},
 	number = {8},
-	journaltitle = {{PLoS} {ONE}},
+	urldate = {2016-05-06},
+	journal = {PLoS ONE},
 	author = {Coll, Marta and Piroddi, Chiara and Steenbeek, Jeroen and Kaschner, Kristin and Ben Rais Lasram, Frida and Aguzzi, Jacopo and Ballesteros, Enric and Bianchi, Carlo Nike and Corbera, Jordi and Dailianis, Thanos and Danovaro, Roberto and Estrada, Marta and Froglia, Carlo and Galil, Bella S. and Gasol, Josep M. and Gertwagen, Ruthy and Gil, João and Guilhaumon, François and Kesner-Reyes, Kathleen and Kitsos, Miltiadis-Spyridon and Koukouras, Athanasios and Lampadariou, Nikolaos and Laxamana, Elijah and López-Fé de la Cuadra, Carlos M. and Lotze, Heike K. and Martin, Daniel and Mouillot, David and Oro, Daniel and Raicevich, Saša and Rius-Barile, Josephine and Saiz-Salinas, Jose Ignacio and San Vicente, Carles and Somot, Samuel and Templado, José and Turon, Xavier and Vafidis, Dimitris and Villanueva, Roger and Voultsiadou, Eleni},
 	editor = {Bograd, Steven J.},
-	urldate = {2016-05-06},
-	date = {2010-08-02},
-	langid = {english},
-	file = {coll_et_al_2010.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/NFX5MQED/coll_et_al_2010.pdf:application/pdf}
+	month = aug,
+	year = {2010},
+	pages = {e11842},
+	file = {coll_et_al_2010.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/NFX5MQED/coll_et_al_2010.pdf:application/pdf}
 }
 
 @article{garciamolinos_climate_2015,
@@ -382,35 +420,30 @@
 	issn = {1758-678X, 1758-6798},
 	url = {http://www.nature.com/doifinder/10.1038/nclimate2769},
 	doi = {10.1038/nclimate2769},
-	pages = {83--88},
 	number = {1},
-	journaltitle = {Nature Climate Change},
-	author = {García Molinos, Jorge and Halpern, Benjamin S. and Schoeman, David S. and Brown, Christopher J. and Kiessling, Wolfgang and Moore, Pippa J. and Pandolfi, John M. and Poloczanska, Elvira S. and Richardson, Anthony J. and Burrows, Michael T.},
 	urldate = {2016-05-06},
-	date = {2015-08-31},
-	file = {molinos_at_al_2015_climate_velocity.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/TGDGMZ32/molinos_at_al_2015_climate_velocity.pdf:application/pdf}
+	journal = {Nature Climate Change},
+	author = {García Molinos, Jorge and Halpern, Benjamin S. and Schoeman, David S. and Brown, Christopher J. and Kiessling, Wolfgang and Moore, Pippa J. and Pandolfi, John M. and Poloczanska, Elvira S. and Richardson, Anthony J. and Burrows, Michael T.},
+	month = aug,
+	year = {2015},
+	pages = {83--88},
+	file = {molinos_at_al_2015_climate_velocity.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/TGDGMZ32/molinos_at_al_2015_climate_velocity.pdf:application/pdf}
 }
 
 @article{visconti_effects_2013,
-	title = {Effects of Errors and Gaps in Spatial Data Sets on Assessment of Conservation Progress: Errors and Gaps in Spatial Data Sets},
+	title = {Effects of {Errors} and {Gaps} in {Spatial} {Data} {Sets} on {Assessment} of {Conservation} {Progress}: {Errors} and {Gaps} in {Spatial} {Data} {Sets}},
 	volume = {27},
 	issn = {08888892},
+	shorttitle = {Effects of {Errors} and {Gaps} in {Spatial} {Data} {Sets} on {Assessment} of {Conservation} {Progress}},
 	url = {http://doi.wiley.com/10.1111/cobi.12095},
 	doi = {10.1111/cobi.12095},
-	shorttitle = {Effects of Errors and Gaps in Spatial Data Sets on Assessment of Conservation Progress},
-	pages = {1000--1010},
+	language = {en},
 	number = {5},
-	journaltitle = {Conservation Biology},
-	author = {Visconti, P. and Di Marco, M. and áLvarez-Romero, J. G. and Januchowski-Hartley, S. R. and Pressey, R. L. and Weeks, R. and Rondinini, C.},
 	urldate = {2016-05-06},
-	date = {2013-10},
-	langid = {english},
-	file = {VISCONTI_et_al-2013-Conservation_Biology.pdf:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/GGGQ754I/VISCONTI_et_al-2013-Conservation_Biology.pdf:application/pdf}
-}
-
-@online{_decision_????,
-	title = {Decision Support Tool Guide {\textbar} {PacMARA}},
-	url = {http://pacmara.org/dstguide},
-	urldate = {2013-05-04},
-	file = {Decision Support Tool Guide | PacMARA:/Users/ohara/Library/Application Support/Zotero/Profiles/th8m611h.default/zotero/storage/244QTSP3/dstguide.html:text/html}
+	journal = {Conservation Biology},
+	author = {Visconti, P. and Di Marco, M. and áLvarez-Romero, J. G. and Januchowski-Hartley, S. R. and Pressey, R. L. and Weeks, R. and Rondinini, C.},
+	month = oct,
+	year = {2013},
+	pages = {1000--1010},
+	file = {VISCONTI_et_al-2013-Conservation_Biology.pdf:/Users/caseyohara/Library/Application Support/Zotero/Profiles/hvirdo1j.default/zotero/storage/GGGQ754I/VISCONTI_et_al-2013-Conservation_Biology.pdf:application/pdf}
 }
