--- a/ms_1_intro.Rmd
+++ b/ms_1_intro.Rmd
@@ -15,34 +15,30 @@ The introduction should:
 
 Knowing where species exist and thrive is fundamental to the sciences of ecology, biogeography, and conservation.  This body of science has resulted in various compiled databases of species distribution and range maps which provide foundational information for understanding species diversity and extinction risk, predicting species responses to human impacts and climate change, and managing and protecting species effectively.  No species range dataset can claim to represent the "truth" of any species' spatial distribution, but rather each offers its own distinct understanding of that latent distribution.  These varying predictions of species presence and absence, driven by intent and methodology, can result in very different predictions of species presence; however, conservation managers and policy makers must base their actions on conclusions drawn from these imperfect datasets.  It is critical to understand the differences in spatial range datasets and the implications of these differences for conservation research and decision-making.
 
-The two most comprehensive, widely-used global-scale repositories that predict marine species ranges throughout the world's oceans are AquaMaps, which rely primarily on model predictions [@kaschner_aquamaps:_2015], and range data from the International Union for Conservation of Nature (IUCN), which rely primarily on expert opinion [@iucn_iucn_2015].  The two datasets are designed to serve different purposes:  IUCN range maps are drawn to estimate extent of occurrence (EOO) [@GastonXXX 1994], communicating range size as an [indicator/factor/criterion] for extinction risk assessments [@IUCNXXX]; AquaMaps essentially communicate the area of occupancy (AOO) [@REFXXX] of a species based on habitat suitability [@AquaMapsXXX].
+The two most comprehensive, widely-used global-scale repositories that predict marine species ranges throughout the world's oceans are AquaMaps, which rely primarily on model predictions to communicate the distribution of a species based on habitat suitability [@kaschner_aquamaps:_2015], and range data from the International Union for Conservation of Nature (IUCN), which rely primarily on expert opinion to communicate range size as a criterion for extinction risk assessments [@iucn_iucn_2015]. 
 
-_paragraph describing IUCN and AM as EOO and AOO respectively, with basic defs and implication that AM will generally be smaller than IUCN; possibly refer to Table S1 for defs and details?_ _one reference: http://www.biodiversitya-z.org/content/species-extent-of-occurrence-eoo "The intent behind this parameter is to measure the degree to which risks from threatening factors are spread spatially across the taxon’s geographical distribution. It is not intended to be an estimate of the amount of occupied or potential habitat, or a general measure of the taxon’s range" and http://www.biodiversitya-z.org/content/species-area-of-occupancy-aoo "The measure reflects the fact that a taxon will not usually occur throughout the area of its extent of occurrence, which may, for example, contain unsuitable habitats"_
-
-The fundamental differences between the datasets suggest that the choice of one over the other should be carefully matched to the purpose for which it is to be used [@GastonXXX 2008, XXX Other refs], and yet these datasets have been used in hundreds of studies and applications for a wide range of purposes, including assessing marine species status [@halpern_index_2012; @halpern_patterns_2015; @selig_assessing_2013-1], evaluating global biodiversity patterns [@coll_biodiversity_2010; @martin_manual_2014; @pimm_biodiversity_2014; @kaschner_current_2011], predicting species range shifts [@garciamolinos_climate_2015], and setting conservation priorities [@klein_shortfalls_2015].  In most of these cases, the implications of choosing one versus the other of these datasets is not evaluated or discussed, yet strong conservation and management conclusions are drawn from the results of the studies.
+While the two datasets ostensibly describe the same information, i.e. where can a particular species be found, they communicate fundamentally distinct concepts.  The IUCN range map for a given species describes the "extent of occurrence" for that species, a contiguous region that encloses all known occurrences and connecting regions, with the explicit caveat that this "does not mean that it is distributed equally within that polygon or occurs everywhere within that polygon" [@iucn_iucn_2015].  The AquaMaps map for a species, on the other hand, seems to better be defined as "area of occupancy": the subset of the extent of occurrence in which the species is actually likely to be found, for example by excluding unsuitable habitats from the extent of occurrence [@iucn_iucn_2015].  The distinctions between extent of occurrence and area of occupancy, including methodology, limitations, and appropriate usage, are well documented [@rondinini_tradeoffs_2006; @gaston_sizes_2009]. ___include reference to a supplemental table for more details?___
 
 <!--
-_The fundamental differences between the intent of the two datasets precludes casual interchangeability between the two [@GastonXXX 2008], and yet they_
-
-_"The two measures (EOO and AOO) serve different purposes, and should not be regarded as alternatives that simply differ in accuracy" - Gaston et al 2004 - literature suggests that this distinction precludes casual interchangeability between the two [@gastonXXX 2008]; they have specific purposes.  And yet they get used, with no explicit acknowldegment of the difference, for a wide range of conservation studies.  It's important to understand the implications and measures to help adapt them to specific uses._
+_paragraph describing IUCN and AM as extent of occurrence and area of occupancy respectively, with basic defs and implication that AM will generally be smaller than IUCN; possibly refer to Table S1 for defs and details?_ _one reference: http://www.biodiversitya-z.org/content/species-extent-of-occurrence-eoo "The intent behind this parameter is to measure the degree to which risks from threatening factors are spread spatially across the taxon’s geographical distribution. It is not intended to be an estimate of the amount of occupied or potential habitat, or a general measure of the taxon’s range" and http://www.biodiversitya-z.org/content/species-area-of-occupancy-aoo "The measure reflects the fact that a taxon will not usually occur throughout the area of its extent of occurrence, which may, for example, contain unsuitable habitats"_
 -->
 
-Here we focus not on how the two datasets should ideally be used; instead, in recognizing that each provides value for many aspects of conservation research, we highlight hidden assumptions and sources of error within each dataset, and explore the implications of choosing one over the other.  _You science with the data you have, not with the data you wish you had.  Often, the ideal type of spatial data is not always available, and non-ideal data is better than no data at all.  In such a case, it is crucial to acknowledge, and where possible address, the resulting tradeoffs._
+The fundamental differences between the datasets suggest that the choice of one over the other should be carefully matched to the purpose for which it is to be used [@gaston_sizes_2009], and yet these datasets have been used in hundreds of studies and applications for a wide range of purposes, including assessing marine species status [@halpern_index_2012; @halpern_patterns_2015; @selig_assessing_2013-1], evaluating global biodiversity patterns [@coll_biodiversity_2010; @martin_manual_2014; @pimm_biodiversity_2014; @kaschner_current_2011], predicting species range shifts [@garciamolinos_climate_2015], and setting conservation priorities [@klein_shortfalls_2015].  In most of these cases, the implications of choosing one versus the other of these datasets is not evaluated or discussed, yet strong conservation and management conclusions are drawn from the results of the studies.
 
-Uncertainties inherent in method and intent inevitably drive differences in the range predictions made by each dataset: extent of occurrence range data such as IUCN range maps will inevitably introduce commission errors (inaccurate indication of presence), while species distribution models such as AquaMaps are expected to introduce fewer commission errors at the expense of more omission errors (inaccurate indications of absence) [@rondinini_tradeoffs_2006].  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range [@rondinini_tradeoffs_2006; @jetz_ecological_2008].  
+Here we focus not on how the two datasets should ideally be used; instead, recognizing that each provides distinct value for conservation research, we explore hidden assumptions and sources of error within each dataset, and test the implications of choosing one over the other.  You do science with the data you have, not with the data you wish you had; often, the ideal type of spatial data is not available, and non-ideal data is better than no data at all.  In such a case, it is crucial to acknowledge, and where possible address, the resulting tradeoffs.
 
-To understand the implications of differences between the AquaMaps and IUCN datasets, we compare how each data source represents the global spatial and taxonomic distribution of the `r format(n_spp_all, big.mark = ',')` marine species mapped by one or both datasets.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')` species; `r p_spp_am`% of total), such that most global analyses related to marine biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` unique marine species).  Yet the small overlap in mapped species between the two datasets means each provides unique value in taxonomic and geographic coverage. 
+___include as table, in body or in supplemental?  It really kind of doesn't fit here any more___ _Uncertainties inherent in method and intent inevitably drive differences in the range predictions made by each dataset: extent of occurrence range data such as IUCN range maps will inevitably introduce commission errors (inaccurate indication of presence), while species distribution models such as AquaMaps are expected to introduce fewer commission errors at the expense of more omission errors (inaccurate indications of absence) [@rondinini_tradeoffs_2006].  Each type of error bears different implications for conservation goals: commission errors can result in prioritizing areas not relevant to conservation goals, while omission errors may result in protected area networks that fail to include important habitat and range [@rondinini_tradeoffs_2006; @jetz_ecological_2008]._ 
 
-Although relatively small in number, these overlap species present a unique opportunity to evaluate the two datasets overall.  As understanding of a given species improves, we expect that range maps, regardless of method, would more closely approach the true distribution in predicting species presence and absence.  Close alignment between two independent range maps can therefore indicate higher confidence in species presence or absence than a single map.  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align in both spatial distribution and overall area. 
+Data availability is a crucial factor in deciding which dataset to use.  We compare how each data source represents the global spatial and taxonomic distribution of the `r format(n_spp_all, big.mark = ',')` marine species mapped by one or both datasets.  Most notably, AquaMaps includes range maps for many more species (currently `r format(n_spp_am, big.mark = ',')` species; `r p_spp_am`% of total), such that most global analyses related to marine biodiversity to date have used AquaMaps (IUCN range map data exist for only `r format(n_spp_iucn, big.mark = ',')` unique marine species).  Yet the small overlap in mapped species between the two datasets means each provides unique value in taxonomic and geographic coverage. 
 
-___maybe here, based on EOO/AOO defs, we expect AM to generally fall within, and describe a smaller range than, IUCN; where the two disagree, that's where it gets interesting___
+Although relatively small in number, these overlap species present a unique opportunity to evaluate the two datasets overall.  For the `r format(n_spp_both, big.mark = ',')` species (`r p_both_all`% of total) mapped in both datasets, we examine how well the maps align in both spatial distribution and overall area.  Based upon the definitions of extent of occurrence and area of occupancy, we expect that for a given species, the AquaMaps predicted distribution will fall within, and describe a smaller range than, the IUCN predicted distribution.  Where these expectations seem to fail, we explore methodological issues that can introduce errors.  In particular, we show how explicitly using depth as a constraint on coral ranges in IUCN range data dramatically mitigates a source of commission error, and highlight a side effect of AquaMaps methodology that results in discontinuous species range boundaries.
 
-Using this alignment framework, we explore methodological issues that can introduce errors, and suggest methods to improve confidence in species range predictions.  In particular, we show how explicitly using depth as a constraint on coral ranges in IUCN range data dramatically mitigates a source of commission error, and highlight a side effect of AquaMaps methodology that results in potentially unexpected species range boundaries.
+<!--As understanding of a given species improves, we expect that range maps, regardless of method, would more closely approach the true distribution in predicting species presence and absence.  Close alignment between two independent range maps can therefore indicate higher confidence in species presence or absence than a single map.-->  
 
 <!--
 We then reexamine two recent marine biodiversity studies - an assessment of the status of global biodiversity within the Ocean Health Index (OHI) [@halpern_index_2012; @halpern_patterns_2015] and a global analysis of gaps in protection afforded by marine protected areas (MPAs) [@klein_shortfalls_2015] - as case studies to explore the implications of prioritizing one data set over the other.  The results highlight possible consequences of different data use decisions on our understanding of marine biodiversity status and protection.  
 -->
 
-As a case study, we then reexamine a global analysis of gaps in protection afforded by marine protected areas (MPAs) [@klein_shortfalls_2015] as a case study to explore the implications of selecting one data set over the other.  Repeating the study using IUCN range data rather than AquaMaps data increases the apparent proportion of gap species from 1.4% to 6.4%, _while also increasing the proportion of well-protected species from 1.5% to 2.9%_ ___verify this second part!!!___.  This shift highlights the implications of different data use decisions on our understanding of marine biodiversity status and protection.  
+As a case study, we then reexamine a global analysis of gaps in protection afforded by marine protected areas (MPAs) [@klein_shortfalls_2015] as a case study to explore the implications of selecting one data set over the other.  Repeating the study using IUCN range data rather than AquaMaps data quintuples the apparent proportion of "gap" species, i.e. those species whose ranges remain completely unprotected, from 1.2% to 6.4%.  This shift highlights the implications of different data use decisions on our understanding of marine biodiversity status and protection.  
 
-While we have identified some potential issues in each dataset, we cannot simply recommend one data set over the other.  Instead, we recommend simple methods to account for incidence of errors in each dataset, improving confidence in species range predictions to better inform conservation management and policy decisions.
+Due to the variation in georegional and taxonomic coverage, and fundamental distinctions in method and intent of these two spatial range datasets, there is no way to simply recommend one dataset over the other.  <!--Instead, we recommend simple methods to account for incidence of errors in each dataset, accounting for and reconciling differences in species range predictions to better inform conservation management and policy decisions.-->  Instead, by making explicit the distinctions between the two, and offering methods to identify and reconcile potential errors in each, we hope to reinforce the effective use of these datasets to better inform conservation management and policy decisions.
