--- a/ms_2_methods.Rmd
+++ b/ms_2_methods.Rmd
@@ -3,21 +3,19 @@
 
 ## About the datasets
 
-The IUCN publishes species range maps developed by species experts.  These experts outline spatial boundaries that define the "limits of distribution" of a given species, based on observation records and informed by expert understanding of species' range and habitat preferences (Fig S1A).  <!--The result is essentially an extent of occurrence (EOO) map for the species-->
+The IUCN publishes species range maps developed by species experts.  These experts outline spatial boundaries that define the "limits of distribution" of a given species, based on observation records and informed by expert understanding of species' range and habitat preferences (Fig S1A).  ___some note about IUCN directions for creating the maps???___.  For the purposes of this analysis, we did not use IUCN data for bird species, which are available separately through Bird Life International [@birdlife_international_and_natureserve_bird_2015].
 
-In contrast, AquaMaps models species distribution based on envelopes of environmental preference, such as temperature, depth, and salinity; these preference envelopes are deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a global 0.5° grid to determine suitable habitat, resulting in a "probability of occurrence" for each species (Fig S1B).  To roughly constrain species ranges to appropriate georegions, the AquaMaps model uses Food and Agriculture Organization of the United Nations (FAO) Major Fishing Area [@REF] boundaries.  Of the resulting maps, 1296 (5.7%) have been further refined through an expert review process [@kaschner_mapping_2006; @ready_predicting_2010].  
-
-<!--In addition to these methodological differences, the two datasets also differ in intent.  IUCN maps essentially communicate the extent of occurrence (EOO) while AquaMaps uses suitable habitat as an indicator of probability of occurrence, -->
+In contrast, AquaMaps models species distribution based on envelopes of environmental preference, such as temperature, depth, and salinity; these preference envelopes are deduced from occurrence records, published species databases such as FishBase, and expert knowledge.  The AquaMaps model overlays these environmental preferences atop a map of environmental attributes on a global 0.5° grid to determine suitable habitat, resulting in a "probability of occurrence" for each species (Fig S1B).  To roughly constrain species ranges to appropriate georegions, the AquaMaps model uses Food and Agriculture Organization of the United Nations (FAO) Major Fishing Area [@fao_fisheries_and_aquaculture_department_cwp_2015] boundaries.  Of the resulting maps, 1296 (5.7%) have been further refined through an expert review process [@kaschner_mapping_2006; @ready_predicting_2010].  
 
 <!--
 ___OMIT: Studies using AquaMaps data frequently define "presence" by applying a probability threshold, e.g., previously, the Ocean Health Index defined presence as 40% or greater probability of occurrence [@halpern_index_2012; @halpern_patterns_2015].  In the 2016 OHI assessment, the presence threshold was eliminated, to better approximate the "extent of occurrence" generally indicated by IUCN maps, since the two datasets are used together.___
 -->
 
-__Comparison of taxonomic and regional distribution__:
+__Comparison of taxonomic and regional distribution:__
 To examine the overall taxonomic distribution across the spatial datasets, we grouped species by taxonomic class and data source, and determined the proportion of each class represented in each dataset.  To compare the spatial representation of the two datasets directly, we rasterized the IUCN species polygons to the same 0.5° grid as the AquaMaps species maps; we determined species presence within a grid cell as any non-zero overlap of a species polygon with the cell  ___(Fig S2)___.  For the AquaMaps dataset, we determined per-cell species count by including all species with non-zero probability of occurrence, to best approximate the "extent of occurrence" generally indicated by IUCN maps.
 
-__Alignment framework for paired maps__: OR __Comparison of paired maps__:
-Species range maps communicate a prediction of both the distribution of a species and the size of a species range.  To enable direct comparison of these measures between the two datasets, we identified "paired map" species, i.e. the subset of marine species that have range maps in both IUCN and AquaMaps current native distribution, using genus and species binomials as a matching key.  We used the taxize package [@REF] in R [@REF] to standardize species names and synonyms; for species with separate subpopulation maps in IUCN, we combined all subpopulations to create a single global population.   For each of these paired map species, we determined species presence within each spatial cell for each dataset using the same criteria outlined above.
+__Comparison of paired maps:__
+Species range maps communicate a prediction of both the distribution of a species and the size of a species range.  To enable direct comparison of these measures between the two datasets, we identified "paired map" species, i.e. the subset of marine species that have range maps in both IUCN and AquaMaps current native distribution, using genus and species binomials as a matching key.  We used the taxize package [@scott_chamberlain_taxize_2013] in R [@r_core_team_r:_2016] to standardize species names and synonyms; for species with separate subpopulation maps in IUCN, we combined all subpopulations to create a single global population.   For each of these paired map species, we determined species presence within each spatial cell for each dataset using the same criteria outlined above.
 
 Overlaying paired distribution maps for each species, we defined and calculated _distribution alignment_ $\alpha_{dist}$ and _area ratio_ $\alpha_{area}$:
 
@@ -27,12 +25,12 @@ $$\alpha_{area} = \frac{A_{small}}{A_{large}} * 100\%$$
 
 For each paired map species, $A_{small}$ and $A_{large}$ indicate the smaller and larger range representation (regardless of which dataset).  $A_{small \cap large}$ represents the amount of overlapping area between the two datasets.  Distribution alignment uses overlapping predictions of presence as a measure of concurrence between the two datasets.  Area ratio compares range size, used by IUCN as a criterion to help define extinction risk; it also provides a proxy for frequency of commission and/or omission errors.
 
-__(some heading here? to separate from alignment)__
-Corals provide a useful case study to examine differences in species range alignment.  They are an intensely studied taxonomic group whose importance in supporting biodiversity is undisputed; their dependence on photosynthesis provides habitat-limiting life history traits, and they don't tend to move.  Extracting data from the IUCN API [@REF?] we identified depth limitations of each coral species mapped in the IUCN dataset to verify that none are found below the photosynthetic depth limit of 200 m.  Using the same methodology as shown in Fig 2, we created a 200 m bathymetry raster from Natural Earth's 200 m bathymetry polygon [@natural_earth_XXX] and masked our IUCN coral rasters to identify mapped coral presence below 200 m.  The resulting maps were again compared to the AquaMaps rasters to examine distribution alignment and area ratio.
+__Examining issues in paired map alignment:__
+Corals provide a useful case study to examine differences in species range alignment.  Corals are an intensely studied taxonomic group whose importance in supporting biodiversity is undisputed; their dependence on photosynthesis provides habitat-limiting life history traits, and they don't tend to move.  Extracting data from the IUCN API [@iucn_iucn_2015] we identified depth limitations of each coral species mapped in the IUCN dataset to verify that none are found below the photosynthetic depth limit of 200 m.  Using the same methodology as shown in Fig 2, we created a 200 m bathymetry raster from a 200 m bathymetry spatial dataset (public domain; available from Natural Earth, www.naturalearthdata.com) and masked our IUCN coral rasters to identify mapped coral presence below 200 m.  The resulting maps were again compared to the AquaMaps rasters to examine distribution alignment and area ratio.
 
 AquaMaps' reliance upon FAO zones to constrain species ranges seems likely to result in abrupt species range boundaries where ecologically suitable habitat intersects with human-defined borders.  To explore the impact of these artificial constraints on species range predictions, we chose to focus on boundaries defined by longitude, as they seem less likely to coincide with ecological differences than boundaries defined by latitude.  As an example, we identified all AquaMaps species whose eastern or western range limit between between 25° S and 20° N latitudes coincided with the large vertical boundary between FAO regions 71 and 77 at 175° W longitude.
 
-The oceans abound with rare and poorly-understood species who offer sparse information on behavior and habitat preferences to inform models and expert opinion.  To identify such data-poor species within the set of paired map species, we used the ___robis???___ and ___rgbif???___ packages [@REFS] in R to identify known occurrences of each species; occurrences were averaged between the two occurrence databases as a proxy for data richness.
+The oceans abound with rare and poorly-understood species which offer sparse information on behavior and habitat preferences to inform models and expert opinion.  To identify such data-poor species within the set of paired map species, we used R clients for OBIS [@obis_data_2016] and GBIF [@gbif_global_2010] to identify known occurrences of each species; occurrences were averaged between the two occurrence databases as a proxy for data richness.
 
 <!--
 
@@ -47,7 +45,7 @@ _To highlight the differences in the datasets, we recalculated the OHI SPP statu
 -->
 
 ## Methods for MPA Gap Analysis case study
-To assess the effectiveness of MPAs in protecting biodiversity, Klein et al. [-@klein_shortfalls_2015] compared the coverage of the global MPA network presented by the World Database on Protected Areas (WDPA) [@iucn_world_2014] to the species ranges described in the 2014 AquaMaps dataset [@aquamaps_XXX].  For the primary analysis, the researchers defined species presence as 50% or greater probability of occurrence.
+To assess the effectiveness of MPAs in protecting biodiversity, Klein et al. [-@klein_shortfalls_2015] compared the coverage of the global MPA network presented by the World Database on Protected Areas (WDPA) [@iucn_world_2014] to the species ranges described in the 2014 AquaMaps dataset [@kaschner_aquamaps:_2015].  For the primary analysis, the researchers defined species presence as 50% or greater probability of occurrence.
 
 To reconstruct the primary analysis, we selected the subset of protected areas from the 2014 WDPA dataset classified as IUCN protected area management categories I-IV and spatially overlapping a marine area. The WDPA polygons and marine polygons were rasterized to 0.01° and then aggregated to AquaMaps native 0.5° cells, to calculate proportion of marine protected area within each cell.  After verifying our results using the 2014 AquaMaps dataset, we updated the analysis to use the 2015 AquaMaps dataset, at a presence threshold of 50% (to compare to Klein et al. directly) and 0% (to better compare with IUCN spatial data).  To analyze MPA coverage against IUCN spatial data, we extracted IUCN polygon weights per 0.5° cell for each species and compared against the protected area raster.  Finally, we combined AquaMaps data (at 0% threshold) and IUCN data, using AquaMaps for the `r format(n_spp_both, big.mark = ',')` overlapping species and again compared against the protected area raster.
 
